updated code files, deleted unused, updated readme

--- a/project 3/code/Project 3 - Reddit API Dating Apps #1 Web Scraping.ipynb
+++ b/project 3/code/Project 3 - Reddit API Dating Apps #1 Web Scraping.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project 3: Reddit API & Classification\n",
+    "# Project 3: Reddit API & Classification (Dating Apps)\n",
     "\n",
     "<table> <tr ><td bgcolor = \"white\"><img src=\"../images/cmblogo.png\" style=\"float: centre; margin: 20px; width, height: 50px\"><td bgcolor = \"white\"></td>  \n",
-    "    <td bgcolor = \"white\"><img src=\"../images/bumblelogo.png\" style=\"float: centre; margin: 20px; width: 50px, height: 50px\"></td>"
+    "    <td bgcolor = \"white\"><img src=\"../images/bumblelogo.png\" style=\"float: centre; margin: 20px; width: 50px, height: 50px\"></td>\n",
+    "    </table>"
    ]
   },
   {
@@ -17,30 +18,53 @@
     "# Problem Statement\n",
     "\n",
     "\n",
-    "With over <a href='https://sg.oberlo.com/blog/reddit-statistics'>430 million monthly active users worldwide</a>, Reddit houses one of the largest social networking communities and is home to a massive 2.2 million subreddits, of which about 130,000 are currently active. \n",
+    "The proliferation of online dating apps since 2013 has revolutionsed the <a href='https://www.businessofapps.com/data/dating-app-market/'>online dating industry</a> , where users are spoilt for choice with over almost 20 different apps to choose from.  As part of a consultancy firm offering data-driven analysis and insights to such dating companies, we identify the most frequently-\n",
+    "used words among app users, so that we can determine the most talked-about features for each app, and provide recommendations to our stakeholders to increase their market share. To kickstart our analysis, we turn to one of the most popular social media platforms, Reddit. \n",
     "\n",
-    "In this project, we narrow down our search to subreddits of 2 popular dating apps - Coffee Meets Bagel (<a href='https://www.reddit.com/r/coffeemeetsbagel'>/r/coffeemeetsbagel</a>) and Bumble(<a href='https://www.reddit.com/r/bumble'>/r/bumble</a>). Using Natural Language Processing, we select and train 3 classification models to determine which is the most effective in accurately classifying the subreddit a post is from based on the text it contains. \n"
+    "With over <a href='https://sg.oberlo.com/blog/reddit-statistics'>430 million monthly active users worldwide</a>, Reddit houses one of the largest social networking communities and is home to a massive 2.2 million subreddits, of which about 130,000 are currently active. In this project, we narrow down our search to subreddits of 2 popular dating apps - Coffee Meets Bagel (<a href='https://www.reddit.com/r/coffeemeetsbagel'>/r/coffeemeetsbagel</a>) and Bumble(<a href='https://www.reddit.com/r/bumble'>/r/bumble</a>). Using Natural Language Processing, we select and train 5 classification models to determine which model has the best performance in classifying posts into their subreddits based on the text the posts contain. The classification metrics - accuracy, recall, precision and specificity - will be used to evaluate the best model's performance.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Executive Summary \n",
+    "\n",
+    "# Executive Summary \n",
     "\n",
     "Reddit has exploded in popularity since its inception in 2005 and has remained one of the most popular social media communities,  with 58% of its users between the  <a href='https://websitebuilder.org/blog/reddit-statistics/'>ages of 18-29</a> . This is well-explained by the fact that the advent of social media coincided with internet usage gaining widespread adoption among millenials (roughly born between 1982 - 1996). Furthermore, the mobile applications (apps) revolution accompanied the rapid increase in mobile phone ownership due to their accessibility, convenience and general quality-of-life improvements. \n",
     "\n",
-    "The online dating scene eventually rose to prominence and naturally, subreddits for all the dating apps were created where redditors gathered to seek advice and share their experiences. 2 of the most widely-used and text-heavy apps (Tinder was skipped as it was full of images) - Coffee Meets Bagel and Bumble - were picked to explore in of this classification analysis.\n",
+    "The online dating scene eventually rose to prominence and naturally, subreddits for all the dating apps were created where redditors gathered to seek advice and share their experiences. 2 of the most widely-used and text-heavy apps (Tinder was skipped as it was full of images) - Coffee Meets Bagel (CMB) and Bumble - were picked to explore in of this classification analysis.\n",
     "\n",
-    "We began by scraping the 2 subreddits for at least 750 posts to account for the elimination of non-useable posts (images only, no text, etc.). Tinder was an initial pick but after scraping \n",
+    "We began by scraping the 2 subreddits for at least 750 posts to account for the elimination of non-useable posts (images only, no text, etc.). Tinder was an initial pick but as seen from the scraping results below, CMB and Bumble were the next 2 subreddits in line with a significantly higher proportion of useable posts. \n",
     "\n",
-    "Scraping Results: \n",
-    "- Tinder 129/750\n",
-    "- Cmb 691/750\n",
-    "- Bumble 430/750   || 501/987\n",
+    "Scraping Results (Useable posts as a %) \n",
+    "- Tinder 129/750 = 17% (Not used) \n",
+    "- Cmb 691/750 = 92% (Used)\n",
+    "- Bumble 501/987 = 51% (Used)\n",
     "\n",
+    "After extensive data cleaning and text preprocesing through the removal of stop words (common words that are not meaningful in our analyses) and combining the title and text of each post, we explore the word frequencies from each subreddit through the use of word clouds and bar charts. Several keywords stood from the respective subreddits: \n",
     "\n",
-    "Consultant for dating app \n"
+    "- CMB: \"discover\", \"suggested\", \"bean\" \n",
+    "- Bumble: \"woman\", \"dating\", \n",
+    "\n",
+    "The modelling selection process involved building pipelines consisting of either the CountVectorizer or Term frequency-Inverse document frequency vectorizer, and a classification model. Hyperparameter tuning was then done to obtain the best training and cross-validated scores for each pipeline. From the tuning results, it was determined that the best model is the Multinomial Naive Bayes model via comparisons with the cross-validated score and the accuracy score on the test (validation) data set, which were 77.0 and 73.6% respectively. \n",
+    "\n",
+    "The results of the classification metrics are as such: \n",
+    "- Accuracy - 73.6% \n",
+    "- Misclassification rate - 26.4%\n",
+    "- Recall - 76.8% \n",
+    "- Precision - 77.4% \n",
+    "- Specificity - 69.3% \n",
+    "\n",
+    "The accuracy score of 73.6% here is not extremely high, suggesting that posts made in the /r/bumble and /r/coffeemeetsbagel subreddits do not differ significantly.\n",
+    "\n",
+    "High recall scores show that the model performs better at classifying posts belonging to /r/coffeemeetsbagel compared to classifying posts belonging to /r/bumble. A misclassification analysis was conducted by looking through the misclassified posts to make sense of the 26.4% misclassification rate. A common trend was discovered from the contents of the posts which consisted of users seeking advice on relationships, sharing their dating experiences on the apps, or ranting about scammers. It is understandable that these topics appear in both subreddits as both groups of users are in similar situations and thus, would share similar experiences. \n",
+    "\n",
+    "Word importance was also explored by determining the top coefficients of words in the respective subreddit. Words which influenced the classification model the most from CMB include 'liked', 'discover' and 'suggested, while that of Bumble was rather inconclusive with 265 words with the joint-highest coefficient. Closer inspection of these words did reveal several keywords unique to the Bumble app, such as 'bee', 'beeline', 'bi', 'binary' and 'non binary'. However, they did not appear frequently enough for our model to pick up their importance. \n",
+    "\n",
+    "These keywords are important because they are features unique to the respective apps, and it is evident CMB has more differentiating factors compared to Bumble, and that Bumble does not have features which are prominent or unique enough. \n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1793,7 +1817,7 @@
    "nav_menu": {},
    "number_sections": false,
    "sideBar": true,
-   "skip_h1_title": true,
+   "skip_h1_title": false,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
