updated images on notebook

--- a/project 3/code/Project 3 - Reddit API Dating Apps #2 EDA, Preprocessing, Modelling .ipynb
+++ b/project 3/code/Project 3 - Reddit API Dating Apps #2 EDA, Preprocessing, Modelling .ipynb
@@ -6,14 +6,9 @@
    "source": [
     "# Project 3: Reddit API & Classification (Dating Apps)\n",
     "\n",
-    "<style>\n",
-    "  table td {\n",
-    "    border: none;\n",
-    "  }\n",
-    "</style>\n",
-    "<table> <tr ><td bgcolor = \"white\"><img src=\"../images/cmblogo.png\" style=\"float: centre; margin: 20px; width, height: 50px\"><td bgcolor = \"white\"></td>  \n",
-    "    <td bgcolor = \"white\"><img src=\"../images/bumblelogo.png\" style=\"float: centre; margin: 20px; width: 50px, height: 50px\"></td>\n",
-    "    </table>"
+    "<p align=\"center\">\n",
+    "    <img src=\"../images/cmbbumblelogo.png\" width, height: 50px\">\n",
+    "</p>"
    ]
   },
   {
