--- a/project 3/code/Project 3 - Reddit API Dating Apps #1 Web Scraping.ipynb
+++ b/project 3/code/Project 3 - Reddit API Dating Apps #1 Web Scraping.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "\n",
     "<p align=\"center\">\n",
-    "    <img src=\"../images/cmbbumblelogo.png\" width, height: 50px\">\n",
+    "    <img src=\"../images/cmbbumblelogo.png\" width, height: 50px>\n",
     "</p>"
    ]
   },
