--- a/project 3/code/Project 3 - Reddit API Dating Apps #2 EDA, Preprocessing, Modelling .ipynb
+++ b/project 3/code/Project 3 - Reddit API Dating Apps #2 EDA, Preprocessing, Modelling .ipynb
@@ -7,7 +7,7 @@
     "# Project 3: Reddit API & Classification (Dating Apps)\n",
     "\n",
     "<p align=\"center\">\n",
-    "    <img src=\"../images/cmbbumblelogo.png\" width, height: 50px\">\n",
+    "    <img src=\"../images/cmbbumblelogo.png\" width, height: 50px>\n",
     "</p>"
    ]
   },
