updated images on notebook #3

--- a/project 3/code/Project 3 - Reddit API Dating Apps #1 Web Scraping.ipynb
+++ b/project 3/code/Project 3 - Reddit API Dating Apps #1 Web Scraping.ipynb
@@ -7,9 +7,7 @@
     "# Project 3: Reddit API & Classification (Dating Apps)\n",
     "\n",
     "\n",
-    "<p align=\"center\">\n",
-    "    <img src=\"../images/cmbbumblelogo.png\" width, height: 50px>\n",
-    "</p>"
+    "<img src=\"../images/cmbbumblelogo.png\" style=\"float: centre; margin: 20px;width, height: 50px\">"
    ]
   },
   {
