--- a/project 3/code/Project 3 - Reddit API Dating Apps #2 EDA, Preprocessing, Modelling .ipynb
+++ b/project 3/code/Project 3 - Reddit API Dating Apps #2 EDA, Preprocessing, Modelling .ipynb
@@ -6,9 +6,7 @@
    "source": [
     "# Project 3: Reddit API & Classification (Dating Apps)\n",
     "\n",
-    "<p align=\"center\">\n",
-    "    <img src=\"../images/cmbbumblelogo.png\" width, height: 50px>\n",
-    "</p>"
+    "<img src=\"../images/cmbbumblelogo.png\" style=\"float: centre; margin: 20px;width, height: 50px\">"
    ]
   },
   {
