updated images on notebook #4

--- a/project 3/code/Project 3 - Reddit API Dating Apps #1 Web Scraping.ipynb
+++ b/project 3/code/Project 3 - Reddit API Dating Apps #1 Web Scraping.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project 3: Reddit API & Classification (Dating Apps)\n",
-    "\n",
-    "\n",
-    "<img src=\"../images/cmbbumblelogo.png\" style=\"float: centre; margin: 20px;width, height: 50px\">"
+    "# Project 3: Reddit API & Classification (Dating Apps)\n"
    ]
   },
   {
