--- a/capstone/code/01_Cleaning_Spotify Popularity Predictor & Song Recommender.ipynb
+++ b/capstone/code/01_Cleaning_Spotify Popularity Predictor & Song Recommender.ipynb
@@ -1223,11 +1223,11 @@
     {
      "data": {
       "text/plain": [
+       "1xQvPFljQXA3GCK869ERvC    9\n",
        "7tJS1cjSD1P8bodNGblYiK    9\n",
        "0UsmyJDsst2xhX1ZiFF3JW    9\n",
-       "1xQvPFljQXA3GCK869ERvC    9\n",
-       "2pZDhsmGRSkRgWNfkDr70S    8\n",
        "7GlixhQpXo76vgALqoJ3L5    8\n",
+       "7Kh32CyazzTdVEBXjKINVO    8\n",
        "Name: id, dtype: int64"
       ]
      },
@@ -2724,22 +2724,22 @@
        "Summertime                                   53\n",
        "The Christmas Song                           51\n",
        "Silver Bells                                 51\n",
-       "Happy New Year                               49\n",
        "Overture                                     49\n",
+       "Happy New Year                               49\n",
        "O Holy Night                                 48\n",
        "99 Year Blues                                45\n",
-       "Ave Maria                                    39\n",
        "It's the Most Wonderful Time of the Year     39\n",
+       "Ave Maria                                    39\n",
        "My Only Wish (This Year)                     38\n",
        "Have Yourself a Merry Little Christmas       36\n",
-       "Hark! The Herald Angels Sing                 34\n",
        "7 Years                                      34\n",
-       "Stay                                         34\n",
        "Blue Christmas                               34\n",
        "Have Yourself A Merry Little Christmas       34\n",
+       "Stay                                         34\n",
+       "Hark! The Herald Angels Sing                 34\n",
        "Stardust                                     33\n",
        "New Years Day - Original Mix                 32\n",
-       "I Love You                                   31\n",
+       "Santa Claus Is Coming To Town                31\n",
        "Name: name, dtype: int64"
       ]
      },
@@ -10375,7 +10375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -10607,7 +10607,7 @@
        "max       243.507000       1.000000    2021.000000  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10618,7 +10618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -10627,7 +10627,7 @@
        "(162981, 19)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10645,7 +10645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -10665,7 +10665,7 @@
        "Name: duration_mins, Length: 162981, dtype: float64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10678,7 +10678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10687,7 +10687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {
     "scrolled": false
    },
@@ -11021,13 +11021,64 @@
        "38968    2018-04-13       0.2140   96.507   0.4420  2018           6.97  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df[df['duration_mins'] > 6].sort_values('popularity', ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year\n",
+       "1992    84269\n",
+       "1993    83988\n",
+       "1994    87745\n",
+       "1995    88233\n",
+       "1996    88753\n",
+       "1997    89870\n",
+       "1998    90894\n",
+       "1999    92921\n",
+       "2000    53695\n",
+       "2001    49639\n",
+       "2002    93201\n",
+       "2003    56713\n",
+       "2004    50239\n",
+       "2005    55246\n",
+       "2006    57384\n",
+       "2007    56512\n",
+       "2008    58404\n",
+       "2009    56351\n",
+       "2010    57173\n",
+       "2011    58577\n",
+       "2012    59597\n",
+       "2013    62201\n",
+       "2014    64013\n",
+       "2015    66713\n",
+       "2016    67857\n",
+       "2017    67735\n",
+       "2018    73443\n",
+       "2019    74248\n",
+       "2020    97144\n",
+       "2021    12429\n",
+       "Name: popularity, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('year').sum()['popularity'].tail(30)"
    ]
   },
   {
