--- a/capstone/code/04_Recommender_Spotify Popularity Predictor & Genre Recommender.ipynb
+++ b/capstone/code/04_Recommender_Spotify Popularity Predictor & Genre Recommender.ipynb
@@ -8,21 +8,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Go with THIS flow \n",
-    "\n",
-    "5. Recommendation system\n",
-    "\n",
-    "Content-based filtering and/or Collaborative filtering \n",
-    "\n",
-    "Song recommender based on features of a song that is input by the user \n",
-    "\n",
-    "Return playlist of 10-20 similar song s"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -1213,22 +1198,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'popularity'",
+     "ename": "NameError",
+     "evalue": "name 'df_genres' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-29-26e5effabc22>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_genres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf_genres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'popularity'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf_genres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\tensorflowdsi\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36msort_values\u001b[1;34m(self, by, axis, ascending, inplace, kind, na_position, ignore_index, key)\u001b[0m\n\u001b[0;32m   5292\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5293\u001b[0m             \u001b[0mby\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mby\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5294\u001b[1;33m             \u001b[0mk\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_label_or_level_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mby\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5295\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5296\u001b[0m             \u001b[1;31m# need to rewrap column in Series to apply key function\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\envs\\tensorflowdsi\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_get_label_or_level_values\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1561\u001b[0m             \u001b[0mvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maxes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_level_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1562\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1563\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1564\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1565\u001b[0m         \u001b[1;31m# Check for duplicates\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'popularity'"
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-26e5effabc22>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf_genres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf_genres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'popularity'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mdf_genres\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'df_genres' is not defined"
      ]
     }
    ],
@@ -2616,29 +2599,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_song():\n",
-    "    song_chosen = False\n",
-    "\n",
-    "    while not song_chosen: \n",
-    "        song_choice = input(\"What song sparks joy in your life?: \")\n",
-    "        try: \n",
-    "            song_query = df_recommender2.loc[song_choice]\n",
-    "        except KeyError: \n",
-    "            song_choice = \"\"\n",
-    "            print(\"Sorry! That song is not in our limited dataset. Please choose another song\")\n",
-    "            song_chosen = False\n",
-    "        if song_choice != \"\":\n",
-    "            song_chosen = True\n",
-    "    return song_choice\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
@@ -2653,8 +2613,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = \"da356cb5fb1c4b3b9546ada6dd4dbd12\"\n",
-    "CLIENT_SECRET = \"e50029f63a2e4cf589f0f5ec903af115\""
+    "# Replace SPOTIFY ID and SPOTIFY_SECRET with your own Spotify details \n",
+    "CLIENT_ID = SPOTIFY_ID\n",
+    "CLIENT_SECRET = SPOTIFY_SECRET "
    ]
   },
   {
@@ -2671,16 +2632,6 @@
     "                              show_dialog=True,\n",
     "                             cache_path=\"token.txt\"))\n",
     "user_id = sp.current_user()[\"id\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# top_20_songs = list(songs_sim[song_query].sort_values(ascending=False).head(20).index)\n",
-    "# top_20_songs"
    ]
   },
   {
@@ -2705,7 +2656,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create for loop to generate playlists for top 30 genres"
+    "For loop to generate playlists for top 30 genres and automatically create playlists on Spotify"
    ]
   },
   {
@@ -2763,6 +2714,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.5 Song Recommender Conclusion \n",
+    "\n",
+    "Using the cosine similarity matrix, we were able to build playlists of songs whose musical features were the most similar to the genres selected (Top 30 genres in this case). Upon further inspection of the playlists, we note that the songs recommended may not necessarily have been of the same genre, despite having similar musical features. For example, Katy Perry's track \"Last Friday Night\" is clearly a pop song, yet it was recommended in the Scandanavian R&B playlist, or how Eminem's rap hit \"Sing For The moment\" was considered similar to the Swedish Tropical House genre. \n",
+    "\n",
+    "This leads us to conclude that although songs may be categorised in a particular genre, their musical features could be similar to songs of another genre. \n",
+    "\n",
+    "In general, the playlists that generated the most similar songs tended tp be from the pop genres. For example, in the Mexican Pop Punk playlist, close to 50% of the songs could be classified as pop, despite being part of other genres as well. <a href=\"https://carrieunderwood.fandom.com/wiki/Country_Music\">Carrie Underwood</a> and <a href=\"https://www.allmusic.com/artist/sam-hunt-mn0002674420/biography\">Sam Hunt</a> and <a href=\"https://theboot.com/top-sara-evans-songs/\">Sara Evans</a> typically associated with country music yet their music is generally defined as country pop. \n",
+    "\n",
+    "Overall, we see that the evolution of music has blurred the lines between the genres of music, meaning that songs traditionally classified as pop could also fall under indie - creating the subgenre Indie Pop. We can also point towards playlists such as Indonesian R&B which consists of mostly English songs but also contains Thai and Korean songs! From this, we see that musical features are language-agnostic and it is possible to be recommended songs which may not necessarily be from that genre, but they have similar musical features to that genre. \n",
+    "\n",
+    "In conclusion, music is fluid where genres transcend languages and music transcends the genres that define them. While recommending music similar to one genre, we may inadvertently recommend songs whose features are similar to other genres. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2804,7 +2772,7 @@
     "width": "267px"
    },
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   },
   "varInspector": {
    "cols": {
